--- a/src/main/webapp/WEB-INF/views/first/goodbye.html
+++ b/src/main/webapp/WEB-INF/views/first/goodbye.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="ISO-8859-1">
-    <title>Hello</title>
+    <title>Goodbye</title>
 </head>
 
 <body>
 
-<b>Hello</b>
+<b>Goodbye!</b>
+<a href="/first/hello"> Say hello</a> or
+<a href="/exit"> EXIT</a>
 </body>
 
 </html>
