--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -5,7 +5,8 @@
     <title>Новый человек</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/people}" th:object="${person}">
+
+<form th:method="POST" th:action="@{/people}" th:object="${user}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
     <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
@@ -20,5 +21,6 @@
     <br/>
     <input type="submit" value="Create!"/>
 </form>
+
 </body>
 </html>
