--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -5,16 +5,14 @@
     <title>Человек</title>
 </head>
 <body>
+<p th:text="${user.getName() + ', ' + user.getAge()}">VALUE</p>
+<p th:text="${'Email: ' + user.getEmail()}">VALUE</p>
+<p th:text="${user.getId()}">VALUE</p>
 
-<p th:text="${person.getName() + ', ' + person.getAge()}">VALUE</p>
-<p th:text="${'Email: ' + person.getEmail()}">VALUE</p>
-<p th:text="${person.getId()}">VALUE</p>
+<a th:href="@{/people/{id}/edit(id=${user.getId()})}">Edit</a>
 
-<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
-
-<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+<form th:method="DELETE" th:action="@{/people/{id}(id=${user.getId()})}">
     <input type="submit" value="Delete"/>
 </form>
-
 </body>
 </html>
